fix z-index issue

--- a/index.scss
+++ b/index.scss
@@ -11,6 +11,7 @@
 
 		&.sticky-stuck {
 			display: table;
+			z-index: 1000;
 		}
 	}
 }
